--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,13 @@ spring.datasource.username=root
 spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 debug=true
-logging.level.ROOT= INFO
-logging.level.bns.tn= INFO
+logging.level.ROOT=INFO
+logging.level.bns.tn=INFO
+# Max file size.
+spring.servlet.multipart.max-file-size=1MB
+# Max request size.
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
